update page width

--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,13 @@ output:
     toc: true
     toc_float: true
 ---
+<style type="text/css">
+.main-container {
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 
 <script src='https://d3js.org/d3.v5.min.js'></script>
 <script src='infographiq.js'></script>
